--- a/Deep_Thought/frontpage.html
+++ b/Deep_Thought/frontpage.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
   <header>
+   
     <div class="logo-container">
-      <h1 class="header-title" style="font-family: Arial; font-size: 25px; font-weight: bold;">DEEP</h1>
-      <h1 class="header-title" style="color: blue; font-family: Arial; font-size: 25px; font-weight: bolder;letter-spacing:1px">THOUGHT</h1>
+      
+    <img src="DT.png"/ style="font-size: 13px;">
     </div>
     <nav>
       <a href="#"><img src="home.png" alt="home"></a>
@@ -49,7 +51,7 @@
 </div>
 
 <div class="box1">
-    <h6 style="background-color: black;color: white;writing-mode: vertical-rl;margin-left: 0px; border-top-left-radius: 15px; border-bottom-left-radius: 15px; height: 200px; width:25px;text-orientation: upright;">NOTICE BOARD</h6>
+    <h6 style="background-color: black;color: white;writing-mode: vertical-rl;margin-left: 0px; border-top-left-radius: 15px; border-bottom-left-radius: 15px; height: 200px; width:25px;text-orientation: upright;letter-spacing: 2px; font-size: 12px;">&times;NOTICE BOARD</h6>
     <p style="background-color: white;"></p>
 </div>
 </div>
@@ -179,7 +181,11 @@
 16.07px;padding-left: 30px; margin-top: 2px;">You have a concept , How will you put into progress?</p>
     </div>
   </section>
+ 
+  <img src="meet.png"/ style="background-color: blue; border-radius: 50px;width: 45px; margin-left: 1200px;display: flex; margin-top: -120px;">
+  <img src="cal.png"/ style="background-color: blue; border-radius: 50px;width: 45px; margin-left: 1200px;display: flex; margin-top:20px;justify-content: center;">
     <script src="script.js"></script>
+    <img src="question.png"/ style="background-color: blue; border-radius: 50px;width: 45px; margin-left: 1200px;display: flex; margin-top: -180px;"/>
  
 </body>
 </html>
