--- a/Deep_Thought/index.html
+++ b/Deep_Thought/index.html
@@ -31,7 +31,7 @@
     </nav>
   </header>
   
-  <h1 style="color:blue;font-family: Arial; font-size: 20px; font-weight: bold; margin-left: 100px; font:poppins; letter-spacing:1px">Technical Project Management</h1>
+  <h1 id="project-title" style="color:blue;font-family: Arial; font-size: 20px; font-weight: bold; margin-left: 100px; font:poppins; letter-spacing:1px">Technical Project Management</h1>
  <div style="margin-top: -37px;">
   <button class="buttons" id="submitTaskBtn" style="background-color: blue; color:white;border-radius: 7px; padding:6px;margin-left: 1100px;letter-spacing:1px">Submit task</button>
 </div> 
@@ -51,12 +51,12 @@
 </div>
 
 <div class="box1">
-    <h6 style="background-color: black;color: white;writing-mode: vertical-rl;margin-left: 0px; border-top-left-radius: 15px; border-bottom-left-radius: 15px; height: 200px; width:25px;text-orientation: upright;letter-spacing: 2px; font-size: 12px;">&times;NOTICE BOARD</h6>
+    <h6 style="background-color: black;color: white;writing-mode: vertical-rl;margin-left: 0px; border-top-left-radius: 15px; border-bottom-left-radius: 15px; height: 200px; width:25px;text-orientation: upright;letter-spacing: 2px; font-size: 12px;">NOTICE BOARD</h6>
     <p style="background-color: white;"></p>
 </div>
 </div>
 
-  <section class="boxes-container">
+  <section   class="boxes-container">
     <div class="box">
       <h4>Technical Project Management</h4>
       <p class="info-button" style="border-radius: 50px ;width:20px;background-color: white; margin-top: -43px; margin-left: 320px;display: flex; justify-content: center;">i</p>
@@ -123,7 +123,7 @@
     </div>
     </div>
   </section>
-  <section class="boxes-container">
+  <section id="tasks-container" class="boxes-container">
     <div class="box">
       <h4>Structure your Pointers</h4>
       <p  class="info-button" style="border-radius: 50px ;width:20px;background-color: white; margin-top: -43px; margin-left: 320px;display: flex; justify-content: center;">i</p>
@@ -182,7 +182,7 @@
     </div>
   </section>
  
-  <img src="meet.png"/ style="background-color: blue; border-radius: 50px;width: 45px; margin-left: 1200px;display: flex; margin-top: -120px;">
+  <img src="meet.png"/ style="background-color: blue; border-radius: 50px;width: 45px; margin-left: 1200px;display: flex; margin-top: -1150px;">
   <img src="cal.png"/ style="background-color: blue; border-radius: 50px;width: 45px; margin-left: 1200px;display: flex; margin-top:20px;justify-content: center;">
     <script src="script.js"></script>
     <img src="question.png"/ style="background-color: blue; border-radius: 50px;width: 45px; margin-left: 1200px;display: flex; margin-top: -180px;"/>
